add slight bevelling on sides/bottom and on top to look nicer.

--- a/data/themes/images/Makefile.am
+++ b/data/themes/images/Makefile.am
@@ -26,4 +26,6 @@ icon_pause2.png \
 icon_spanner.png \
 icon_spanner2.png \
 icon_volume2.png \
-pos_indicator_big.png
+pos_indicator_big.png \
+bevel_dark_out.png \
+bg_bevel.png
