add gesture seeking (drag horizontally + momentum)

--- a/src/bin/Makefile.am
+++ b/src/bin/Makefile.am
@@ -12,6 +12,7 @@ rage_LDADD = @RAGE_LIBS@
 rage_SOURCES = \
 controls.c controls.h \
 dnd.c dnd.h \
+gesture.c gesture.h \
 key.c key.h \
 main.c main.h \
 video.c video.h \
