add vidual video list selector
this allows you to see the video playlisty live, select items from it,
scroll around and have full live paying previews in the list

--- a/data/themes/images/Makefile.am
+++ b/data/themes/images/Makefile.am
@@ -28,4 +28,6 @@ icon_spanner2.png \
 icon_volume2.png \
 pos_indicator_big.png \
 bevel_dark_out.png \
-bg_bevel.png
+bg_bevel.png \
+win_glow.png \
+win_shadow.png
