add engine config (save/load and cmdline option) - no gui though

--- a/src/bin/Makefile.am
+++ b/src/bin/Makefile.am
@@ -18,4 +18,5 @@ main.c main.h \
 video.c video.h \
 winvid.c winvid.h \
 win.c win.h \
-winlist.c winlist.h
+winlist.c winlist.h \
+config.c config.h
