--- a/src/bin/Makefile.am
+++ b/src/bin/Makefile.am
@@ -19,4 +19,17 @@ video.c video.h \
 winvid.c winvid.h \
 win.c win.h \
 winlist.c winlist.h \
-config.c config.h
+config.c config.h \
+sha1.c sha1.h
+
+internal_bindir = $(libdir)/rage/utils
+internal_bin_PROGRAMS = rage_thumb
+
+rage_thumb_SOURCES = \
+thumb.c \
+sha1.c sha1.h
+
+rage_thumb_LDADD = @RAGE_LIBS@
+rage_thumb_CPPFLAGS = -I. \
+-DPACKAGE_BIN_DIR=\"$(bindir)\" -DPACKAGE_LIB_DIR=\"$(libdir)\" \
+-DPACKAGE_DATA_DIR=\"$(pkgdatadir)\" @RAGE_CFLAGS@
