add video thumbnails on timeline/dragable/seeker at the bottom
these thumbnails are generated in the bg by rage_thumb and will appear
once generated (or already found cached). it'll generate new thumbs if
modified dates are equal or newer on tthe src vs the thumbnail cache.
the caches store 160xN thumbs (keep aspect) with 70% lossy jpeg
quality in an eet file with one thumb per 10 second interval. so it
has limited accuracy.

--- a/src/bin/Makefile.am
+++ b/src/bin/Makefile.am
@@ -20,7 +20,8 @@ winvid.c winvid.h \
 win.c win.h \
 winlist.c winlist.h \
 config.c config.h \
-sha1.c sha1.h
+sha1.c sha1.h \
+videothumb.c videothumb.h
 
 internal_bindir = $(libdir)/rage/utils
 internal_bin_PROGRAMS = rage_thumb
