rage - add album art fetching for audio only stuff.
if the track is audio only, it'll look in a cache of albumart, if not,
request the big google in the sky for an image with some search terms
guessed from id3/metadata/filename and then use that. tak'es the first
thing found. not very smart, but pretty damned good most of the time.

--- a/src/bin/Makefile.am
+++ b/src/bin/Makefile.am
@@ -21,7 +21,8 @@ win.c win.h \
 winlist.c winlist.h \
 config.c config.h \
 sha1.c sha1.h \
-videothumb.c videothumb.h
+videothumb.c videothumb.h \
+albumart.c albumart.h
 
 internal_bindir = $(libdir)/rage/utils
 internal_bin_PROGRAMS = rage_thumb
