--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 *.o
 *.swo
 *.swp
-/Makefile
-/Makefile.in
+Makefile
+Makefile.in
 /aclocal.m4
 /compile
 /config.log
@@ -18,32 +18,17 @@
 /rage_config.h.in
 /rage.spec
 /autom4te.cache/
-/data/Makefile
-/data/Makefile.in
-/data/desktop/Makefile
-/data/desktop/Makefile.in
-/data/icons/Makefile
-/data/icons/Makefile.in
-/data/images/Makefile
-/data/images/Makefile.in
-/data/themes/Makefile
-/data/themes/Makefile.in
 /data/themes/default.edj
-/data/themes/images/Makefile
-/data/themes/images/Makefile.in
 /m4/libtool.m4
 /m4/ltoptions.m4
 /m4/ltsugar.m4
 /m4/ltversion.m4
 /m4/lt~obsolete.m4
-/src/Makefile
-/src/Makefile.in
 /src/bin/.deps/
-/src/bin/Makefile
-/src/bin/Makefile.in
 /src/bin/rage
 /src/bin/rage_thumb
 pkgbuild/PKGBUILD
 pkgbuild/pkg
 pkgbuild/src
 pkgbuild/*.tar.xz
+.dirstamp
