dnd: Recurse into directories using eio
Signed-off-by: Eduardo Lima (Etrunko) <eduardo.lima@intel.com>

--- a/configure.ac
+++ b/configure.ac
@@ -21,6 +21,7 @@ requirements="\
    elementary >= ${efl_version} \
    edje >= ${efl_version} \
    emotion >= ${efl_version} \
+   eio >= ${efl_version} \
    "
 PKG_CHECK_MODULES([RAGE], [${requirements}])
 
