Better Exec line in the desktop file
%U means that rage can accept one or more urls as params

Whitout this filemanagers (nemo at least) never list rage
as a suggested default for your files and you cannot
set rage as your default player.

--- a/data/desktop/rage.desktop
+++ b/data/desktop/rage.desktop
@@ -6,7 +6,7 @@ GenericName=Video Player
 GenericName[ru]=Видеоплеер
 Comment=Video player
 Comment[ru]=Видеоплеер
-Exec=rage
+Exec=rage %U
 Icon=rage
 Categories=AudioVideo;Player;
 StartupWMClass=rage
