Revert "improve build system to use only one makefile"
This reverts commit 25ffdc470cdd28d4c55782563b833151641a0356.

go back to good 'old subdir build. it's just too much of a pain having
to always build from a toplevel dir. see all the issues with efl doing
this.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,7 @@
-AUTOMAKE_OPTIONS = subdir-objects
 ACLOCAL_AMFLAGS = -I m4
 
-DISTCLEANFILES =
-CLEANFILES =
+SUBDIRS = src data
+
 MAINTAINERCLEANFILES = \
 Makefile.in \
 $(PACKAGE_TARNAME)-$(PACKAGE_VERSION).tar.gz \
@@ -30,11 +29,6 @@ m4/ltversion.m4
 EXTRA_DIST = README AUTHORS COPYING autogen.sh rage.spec pkgbuild/PKGBUILD
 
 .PHONY: doc
-
-include src/bin/Makefile.mk
-include data/desktop/Makefile.mk
-include data/icons/Makefile.mk
-include data/themes/Makefile.mk
 
 doc:
 	@echo "Empty doc target until we have real documentation."
