--- a/.gitignore
+++ b/.gitignore
@@ -2,33 +2,11 @@
 *.o
 *.swo
 *.swp
-Makefile
-Makefile.in
-/aclocal.m4
-/compile
-/config.log
-/config.status
-/configure
-/depcomp
-/install-sh
-/ltmain.sh
-/missing
-/stamp-h1
 /rage_config.h
-/rage_config.h.in
 /rage.spec
-/autom4te.cache/
 /data/themes/default.edj
-/m4/libtool.m4
-/m4/ltoptions.m4
-/m4/ltsugar.m4
-/m4/ltversion.m4
-/m4/lt~obsolete.m4
-/src/bin/.deps/
-/src/bin/rage
-/src/bin/rage_thumb
-pkgbuild/PKGBUILD
-pkgbuild/pkg
-pkgbuild/src
-pkgbuild/*.tar.xz
-.dirstamp
+/pkgbuild/PKGBUILD
+/pkgbuild/pkg
+/pkgbuild/src
+/pkgbuild/*.tar.xz
+/build
