--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -1,2 +1,4 @@
 install_data('rage.png',
              install_dir: join_paths(dir_data, 'icons'))
+install_data('rage.png',
+             install_dir: join_paths(dir_data, proj, 'images'))
